examples/pos/formals1.pcl
program formals1;

function foo(var x: integer) : integer;
begin
  result := 2;
  return;
end;

begin
  foo(3);
end.
