examples/neg/labels1.pcl
program etiketa1;
label x, y;
var z, k : integer;
begin
  z := 3;
  goto giorgos;
  k := 4;
  x: k:= 5;
end.
